--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ button:hover {
     padding: 20px;
     border-radius: 8px;
     margin: 20px 0;
-    background-image:url("../images/gettyimages-2148369253-612x612.jpg");
+    background-image:url("gettyimages-2148369253-612x612.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
